         64x64/application-x-spectrum.png,64x64/fuse.png}: add freedesktop
         integration (patch #3413549) (Sergio).
20120226 movie.c: fix warnings.
20120226 settings.dat: we don't load the Spectranet firmware from a .rom file
         any more.
20120227 man/fuse.1: document the --swap-mouse-buttons option and various other
         minor tweaks.
20120229 ui/gtk/{binary.c,browse.c,debugger.c,gtkdisplay.c,gtkinternals.h,
         gtkui.c,memory.c,picture.c,pokefinder.c,pokemem.c,rollback.c,roms.c,
         stock.c}: replace deprecated gtk_signal_connect() with
         g_signal_connect() (patch #3495404) (Alberto Garcia).
20120301 ui/gtk/{binary.c,browse.c,debugger.c,gtkdisplay.c,gtkui.c,memory.c,
         picture.c,pokefinder.c,pokemem.c,rollback.c,roms.c,stock.c}:
         GtkObject is deprecated, remove all references to it (patch #3495406)
         (Alberto Garcia).
20120302 man/fuse.1: document the --beta128-48boot option and various other
         minor tweaks (fixes bug #3495087) (Fred).
20120303 man/fuse.1: first stab at documenting the --disk-ask-merge and
         --disk-try-merge options (the man page really needs a new section for
         drives setup) (fixes bug #3495089) (Fred).
20120305 man/fuse.1: first stab at documenting the --joystick-{1,2}-output,
         --joystick-{1,2}-fire-{1,2,3,4,5,6,7,8,9,10} and
         --joystick-keyboard-{output,up,down,left,right,fire} options 
         (fixes bug #3495086) (Fred).
20120310 fuse.xml.in: remove mime types for compressed hdf/mdr/rom files as Fuse
         doesn't support them (more from patch #3413549) (Sergio).
20120327 menu.h,menu_data.pl,ui/gtk/{Makefile.am,binary.c,browse.c,
         gtkinternals.h,gtkjoystick.c,gtkui.c,memory.c,pokefinder.c,pokemem.c},
         utils.[ch]: remove deprecated GTK+ menu functions (patch #3510225)
         (Sergio).
20120506 peripherals/nic/w5100_internals.h: fix build break when building
         without glib (fixes bug #3513990) (Sergio).