@@ -4101,3 +4101,5 @@
          (Sergio).
 20120506 peripherals/nic/w5100_internals.h: fix build break when building
          without glib (fixes bug #3513990) (Sergio).
+20120506 ui/widget/pokemem.c: fix crash in widget Poke Memory dialog (fixes bug
+         #3514720) (Sergio).
